Sun Sep 26 10:25:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/config.{guess,sub}: updated to automake-1.11.1.

Sat Sep 25 22:48:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_DLDFLAGS): fix quoting.

Sat Sep 25 10:30:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_DLDFLAGS): use -unexported_symbol only
	  when available.  http://trac.macports.org/ticket/26341

Sat Sep 25 10:05:49 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: Always add -mieee for Renesas SH4.
	Thanks, Nobuhiro Iwamatsu. [Feature #3874] [ruby-core:32548]

Sat Sep 25 01:34:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (install-cross): target to install cross-compiling
	  stuff.

Fri Sep 24 23:44:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_call), vm.c (invoke_block_from_c),
	  vm_insnhelper.c (vm_yield_with_cfunc): pass given block.
	  [ruby-core:32075]

	* vm_eval.c (rb_funcall_passing_block): new function to call
	  method with passing given block.

Fri Sep 24 15:50:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_to_i): fix rdoc: String#to_i raises an
	  exception when base is invalid. [ruby-core:31685]

Fri Sep 24 15:28:35 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_rindex): use rb_enc_prev_char instead of repeated str_nth.
	  patched by Michael Selig [ruby-core:32498]

Fri Sep 24 14:19:12 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/test_pty.rb: Same as 229281; existence of PTY class do not
	  guarantee a successful pty operation.

Thu Sep 23 23:09:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_get_cref0): cref is stacked only in normal
	  iseqs, so check if it is the case first.

Thu Sep 23 23:08:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/config.sub: mingw64 should use x86_64.  [ruby-core:32514]

Thu Sep 23 21:40:40 2010  wanabe  <s.wanabe@gmail.com>
